--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.1",
+    "react-spinners": "^0.13.8",
     "sweetalert2": "^11.10.6"
   },
   "devDependencies": {
